gui: Fix grid misalignment due to split pane slider
Grid was not perfectly centered by a few pixels due to split pane
transparent slider padding.

--- a/croiseur-gui/croiseur-gui-view/src/main/resources/com/gitlab/super7ramp/croiseur/gui/view/CrosswordSolverPane.css
+++ b/croiseur-gui/croiseur-gui-view/src/main/resources/com/gitlab/super7ramp/croiseur/gui/view/CrosswordSolverPane.css
@@ -4,6 +4,7 @@
  */
 
 .split-pane > .split-pane-divider {
-    /* Hide the decoration, make it looks like a non-resizable border. */
+    /* Hide the decoration, make it look like a non-resizable border. */
     -fx-opacity: 0;
+    -fx-padding: 0;
 }
